# fabmos

./: .gitignore  .gitmodules  README.md  environment-win.yml  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
conda.recipe/: meta.yaml  readme.md
examples/: ersem-benthos.py  fabm-ersem-benthos.yaml  seagrass.py  tmm_ERSEM.py  tmm_MITgcm_2.8deg_MOPS.py  tmm_MITgcm_2.8deg_tracer.py  tmm_MOPS.py  tmm_tracer.py
examples/tmm/: ERSEM.py  MOPS.py  PISCES.py  rivrstat.txt  tracer.py  tracer_simple.py
src/fabmos/: __init__.py  _version.py  domain.py  environment.py  simulator.py
src/fabmos/input/: __init__.py  cluster.py  riverlist.py
src/fabmos/transport/: gotm.py  null.py  pygetm.py  tmm.py
