[build-system]
requires = ["setuptools >= 61.0.0", "setuptools_scm >= 8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabmos"
dynamic = ["version"]
authors = [
  {name = "Jorn Bruggeman", email = "jorn@bolding-bruggeman.com"}
]
description = "Offline simulator for FABM"
requires-python = ">=3.8"
dependencies = [
  "pygetm >= 0.9.14"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/BoldingBruggeman/fabmos"
"Documentation" = "https://github.com/BoldingBruggeman/fabmos/wiki"
"Repository" = "https://github.com/BoldingBruggeman/fabmos"

[tool.setuptools]
#packages = ["fabmos"]

[tool.setuptools_scm]
version_file = "src/fabmos/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"
